Finished search feature

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -2,22 +2,29 @@
 
 <h1>Employees</h1>
 
+<%= form_for(employees_path, method: :get) do %>
+  Employee's Name<%= text_field_tag :name, params[:name] %> <br>
+  Employee's Department ID<%= text_field_tag :department_id,params[:department_id] %> <br>
+  Employee's Status<%= check_box_tag :active, params[:active], true %>
+  <%= submit_tag ('Search'), name: nil %>
+<% end %>
+
 <table>
   <thead>
     <tr>
-      <th>Department</th>
       <th>Name</th>
       <th>Active</th>
+      <th>Department</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @employees.each do |employee| %>
+    <% @employee.each do |employee| %>
       <tr>
-        <td><%= employee.department.name %></td>
         <td><%= employee.name %></td>
         <td><%= employee.active %></td>
+        <td><%= employee.department.id %></td>
         <td><%= link_to 'Show', employee %></td>
         <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
         <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
