--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,17 @@
 @import "bootstrap";
+h1,h2,h1,tr,td,p {
+  color:	#808080;
+}
+h1 {
+  margin-top: 0.5em;
+  text-align: center;
+}
+.form {
+  width: 30%;
+  color:	#808080;
+  font-weight: 200;
+  margin:0 auto;
+}
+table {
+  margin-top: 0.5em;
+}
